hphp/hack/test/typecheck/nonnull/unconstrained_generic_type_parameter.php.like_types.exp
File "unconstrained_generic_type_parameter.php", line 4, characters 10-11:
Invalid return type (Typing[4110])
File "unconstrained_generic_type_parameter.php", line 3, characters 25-31:
Expected nonnull
File "unconstrained_generic_type_parameter.php", line 3, characters 18-18:
But got dynamic because it is an unenforceable type
